# rize

./: Cargo.toml
crates/librize/: Cargo.toml
crates/rize/: Cargo.toml
crates/rize-analyzer/: Cargo.toml
crates/rize-analyzer/src/: main.rs
crates/rize-syntax/: Cargo.toml
crates/rize-syntax/src/: lib.rs
crates/rize/src/: main.rs
docs/syntax/: variable.rize
nix/: flake.nix
tests/syntax/: let.rize
