[package]
name = "rize-syntax"
edition = "2024"
version.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
miette.workspace = true
tower-lsp = "0.20"

[dev-dependencies]
quickcheck = "1"
serde_json = "1.0"
serde = "1"

[lints]
workspace = true
