[package]
name = "rize"
edition = "2024"
version.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true

[dependencies]
rize-syntax = { path = "../rize-syntax" }

[lints]
workspace = true
